--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<title>BARBERSHOP</title>
 	<meta charset="utf-8">
       <meta name="viewport" content="widht=device-width,initial-scale=1.0">
+      <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="css/style.css">     
       <link href="http://fonts.cdnfonts.com/css/mohave" rel="stylesheet">
-      <link rel="icon" href="logo nico.jfif">
+      <link rel="icon" href="img/logo nico.jfif">
 </head>
 
 <body>               
@@ -14,17 +15,39 @@
 <header>   
 
       <div class="logo">
-            <span>NIKO</span> </br> <span>BAR</span> </br> <span>BER</span> </br> </p>     
+            <span>NIKO</span> </br> <span>BAR</span> <br> <span>BER</span> </br>   
       </div>
 
-           <nav>   
-                <a href="galeria.html"> GALERIA </a>
+           <nav class="barra">   
+                <a class="galeria1" href="galeria.html"> GALERIA </a>
                 <a href="contacto.html"> CONTACTO </a>  
                 <a href="ubicacion.html">UBICACIÓN</a>       
            </nav>  
 
 </header>   
-   
-            	
+ 
+<div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/barba.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/corte 10.jfif" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/corte 3.jfif" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <script src="./js/bootstrap.bundle.min.js"></script>  	
 </body>
 </html>
