--- a/galeria.html
+++ b/galeria.html
@@ -27,11 +27,11 @@
       <div class="todaslasfotos">
 
             <div class="imagen1">
-                 <img src="img/impresionante-corte-cabello-rostro-lionel.jpg">
+                 <img src="img/manolete.jfif">
             </div>
 
             <div class="imagen2">
-                  <img src="img/a5cc79bcae1d3b843c57b7664fca0cee.jpg" >
+                  <img src="img/bomba.jfif" >
              </div>
 
              <div class="imagen3" >
