--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <a href="ubicacion.html">UBICACIÓN</a>       
            </nav>  
 
-</header>   
+</header>  
  
 <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/barba.jpg" class="d-block w-100" alt="...">
+         <img class="primera" src="img/inicio1.jpg" class="d-block w-100" alt="..."> 
         </div>
         <div class="carousel-item">
           <img src="img/corte 10.jfif" class="d-block w-100" alt="...">
