--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="css/style.css">     
       <link href="http://fonts.cdnfonts.com/css/mohave" rel="stylesheet">
+      <link href="http://fonts.cdnfonts.com/css/Righteous" rel="stylesheet">
+      <link href="http://fonts.cdnfonts.com/css/Asap Condensed" rel="stylesheet">
       <link rel="icon" href="img/logo nico.jfif">
 </head>
 
-<body>               
+<body>  
 
 <header>   
 
@@ -25,29 +27,11 @@
            </nav>  
 
 </header>  
- 
-<div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-         <img class="primera" src="img/inicio1.jpg" class="d-block w-100" alt="..."> 
-        </div>
-        <div class="carousel-item">
-          <img src="img/corte 10.jfif" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img/corte 3.jfif" class="d-block w-100" alt="...">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
 
-    <script src="./js/bootstrap.bundle.min.js"></script>  	
-</body>
+  <div class="contenedor">
+  <div class="letra">  <div class="since">SINCE      2020</div>  <div class="niko"> NIKO</div>  <div class="barber"> BARBER</div> </div>
+  </div>
+
+     <script src="./js/bootstrap.bundle.min.js"></script>  	
+</body> 
 </html>
