--- a/contacto.html
+++ b/contacto.html
@@ -19,8 +19,23 @@
         <a href="ubicacion.html">UBICACIÓN</a>
       </nav>
     </header>
-<div>
-  <p>PÁGINA EN CONSTRUCCIÓN</p>
+<div class="cartas">
+<div class="card" style="width: 18rem;">
+  <img src="img/bomba.jfif" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">INSTAGRAM</h5>
+    <p class="card-text">Visita nuestra página de instagram y miro todo lo que te podemos ofrecer</p>
+    <a href="https://www.instagram.com" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">WHATSAPP</h5>
+    <p class="card-text">Contactanos vía whatsapp y pedí tu turno.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
 </div>
     <script src="./js/bootstrap.bundle.min.js"></script>  	
 </html>
