--- a/contacto.html
+++ b/contacto.html
@@ -3,39 +3,45 @@
   <head>
     <title>BARBERSHOP</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/contacto.css" />
     <meta name="viewport" content="widht=device-width,initial-scale=1.0">
-    <link href="http://fonts.cdnfonts.com/css/mohave" rel="stylesheet" />
+    <link href="http://fonts.cdnfonts.com/css/mohave" rel="stylesheet">
+    <link rel="icon" href="img/logo-arriba.jfif"> 
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/ubicacion.css" />
   </head>
   <body>
+
     <header>
+
       <div class="logo">
-            <span>NIKO</span> </br> <span>BAR</span> <br> <span>BER</span> </br>   
-      </div>
-      <nav>
-        <a href="index.html"> INICIO </a>
+        <span>NIKO</span> </br> <span>BAR</span> <br> <span>BER</span> </br>   
+     </div>
+
+     <nav>
+        <a href="index.html">INICIO</a>
         <a href="galeria.html"> GALERIA </a>
-        <a href="ubicacion.html">UBICACIÓN</a>
+        <a href="ubicacion.html"> UBICACIÓN </a>
+
       </nav>
+
     </header>
-<div class="cartas">
-<div class="card" style="width: 18rem;">
-  <img src="img/bomba.jfif" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">INSTAGRAM</h5>
-    <p class="card-text">Visita nuestra página de instagram y miro todo lo que te podemos ofrecer</p>
-    <a href="https://www.instagram.com" class="btn btn-primary">Go somewhere</a>
-  </div>
+
+<div class="contenedor-ubicacion-fondo">
+    <div class="ubicacion-titulo"> CONTACTO</div>
 </div>
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">WHATSAPP</h5>
-    <p class="card-text">Contactanos vía whatsapp y pedí tu turno.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
+
+<div class="contenedor-segunda-parte">
+  <div class="mapa-segunda-parte"> <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png"  ></a> </div>
+    <div class="barberia-foto-segunda-parte"> <a href="https://web.whatsapp.com/"  target="_blank"><img src="img/whatsapp.png"  > </a></div>
 </div>
-</div>
-    <script src="./js/bootstrap.bundle.min.js"></script>  	
+
+<div class="contenedor-texto-segunda-parte">
+    <div  class="donde-encontrarnos" >  <h2>Como Contactarnos? </h2></div>
+    <div class="palazzo">  <p> Por whatsapp o instagram.
+      tocando cualquiera de las 2 imagenes </p></div>
+
+</div> 
+<script src="./js/bootstrap.bundle.min.js"></script>  	
+  </body>
 </html>
+
