--- a/galeria.html
+++ b/galeria.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
      <meta name="viewport" content="widht=device-width,initial-scale=1.0">
       <link rel="stylesheet" href="css/galeria.css">
+      <link rel="icon" href="img/logo-arriba.jfif"> 
       <link href="http://fonts.cdnfonts.com/css/mohave" rel="stylesheet">
    
    
@@ -20,6 +21,7 @@
                     <a href="index.html"> INICIO </a>
                     <a href="contacto.html"> CONTACTO </a>  
                      <a href="ubicacion.html">UBICACIÓN</a>       
+
                </nav>                   
      </header>   
      
@@ -29,42 +31,53 @@
 
             <div class="imagen1">
                  <img src="img/manolete.jfif" >
+                 <h3 class="texto-imagen"> Corte 1</h3>
             </div>
 
+
             <div class="imagen2" >
-                  <img src="img/bomba.jfif"  >
+                  <img src="img/bomba.jfif" >
+               <h3 class="texto-imagen"> Corte 2</h3>
              </div>
 
              <div class="imagen3" >
                  <img src="img/corte 3.jfif" >
+                 <h3 class="texto-imagen"> Corte 3</h2>
              </div>
 
              <div class="imagen4" >
                   <img src="img/corte 4.jpg" >
+                  <h3 class="texto-imagen"> Corte 4</h3>
              </div>
 
              <div class="imagen5" >
                   <img src="img/corte 5.webp" >
+                  <h3 class="texto-imagen"> Corte 5</h3>
              </div>
 
              <div class="imagen6" >
                   <img src="img/corte 6.jfif" >
+                  <h3 class="texto-imagen"> Corte 6</h3>
              </div>
 
              <div class="imagen7" >
                   <img src="img/corte 7.jfif " >
+                  <h3 class="texto-imagen"> Corte 7</h3>
              </div>
 
              <div class="imagen8" >
                   <img src="img/corte 8.jfif" >
+                  <h3 class="texto-imagen"> Corte 8</h3>
              </div>
 
              <div class="imagen9" >
                   <img src="img/corte 9.jfif" >
+                  <h3 class="texto-imagen">Corte 9</h3>
              </div>
 
              <div class="imagen10" >
                   <img src="img/corte 10.jfif" >
+                  <h3 class="texto-imagen"> Corte 10</h3>
              </div>
 
       </div>
