--- a/index.html
+++ b/index.html
@@ -1,37 +1,65 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>BARBERSHOP</title>
-	<meta charset="utf-8">
-      <meta name="viewport" content="widht=device-width,initial-scale=1.0">
-      <link rel="stylesheet" href="css/bootstrap.min.css">
-      <link rel="stylesheet" href="css/estilo.css">     
-      <link href="http://fonts.cdnfonts.com/css/mohave" rel="stylesheet">
-      <link href="http://fonts.cdnfonts.com/css/Righteous" rel="stylesheet">
-      <link href="http://fonts.cdnfonts.com/css/Asap Condensed" rel="stylesheet">
-      <link rel="icon" href="img/logo nico.jfif">
-</head>
+  <head>
+    <title>BARBERSHOP</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="widht=device-width,initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="pelo, cortes de pelo, peluqueria, aspecto fisico"
+    />
+    <meta
+      name="description"
+      content="Ofrecemos un servios de corte de pelo a nivel profesional y estetico"
+    />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/estilo.css" />
+    <link rel="icon" href="img/logo-arriba.jfif" />
+    <link href="http://fonts.cdnfonts.com/css/mohave" rel="stylesheet" />
+    <link href="http://fonts.cdnfonts.com/css/Righteous" rel="stylesheet" />
+    <link
+      href="http://fonts.cdnfonts.com/css/Asap Condensed"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="img/logo nico.jfif" />
+  </head>
 
-<body>  
-
-<header>   
-
-      <div class="logo">
+  <body>
+    <header>
+       <div class="logo">
             <span>NIKO</span> </br> <span>BAR</span> <br> <span>BER</span> </br>   
+      </div> 
+
+      <nav class="barra">
+        <a class="galeria1" href="galeria.html"> GALERIA </a>
+        <a href="contacto.html"> CONTACTO </a>
+        <a href="ubicacion.html">UBICACIÓN</a>
+
+      </nav>
+    </header>
+    <div class="foto">
+      <div class="contenedor">
+            <div class="letra">
+              <div class="since">SINCE 2020</div>
+              <div class="niko">NIKO</div>
+              <div class="barber">BARBER</div>
+            </div>
+          </div>
+    </div>
+<!-- 
+    <div class="contenedor">
+      <div class="letra">
+        <div class="since">SINCE 2020</div>
+        <div class="niko">NIKO</div>
+        <div class="barber">BARBER</div>
       </div>
+    </div> -->
 
-           <nav class="barra">   
-                <a class="galeria1" href="galeria.html"> GALERIA </a>
-                <a href="contacto.html"> CONTACTO </a>  
-                <a href="ubicacion.html">UBICACIÓN</a>       
-           </nav>  
 
-</header>  
+    <div class="contacto">
+      <h3>Contactanos</h3>
+    </div>
 
-  <div class="contenedor">
-  <div class="letra">  <div class="since">SINCE      2020</div>  <div class="niko"> NIKO</div>  <div class="barber"> BARBER</div> </div>
-  </div>
-
-     <script src="./js/bootstrap.bundle.min.js"></script>  	
-</body> 
+    <script src="./js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
