--- a/ubicacion.html
+++ b/ubicacion.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="widht=device-width,initial-scale=1.0">
     <link href="http://fonts.cdnfonts.com/css/mohave" rel="stylesheet">
+    <link rel="icon" href="img/logo-arriba.jfif"> 
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/ubicacion.css" />
   </head>
   <body>
@@ -19,6 +21,7 @@
         <a href="index.html">INICIO</a>
         <a href="galeria.html"> GALERIA </a>
         <a href="contacto.html"> CONTACTO </a>
+
       </nav>
 
     </header>
@@ -38,6 +41,6 @@
       -45.796332, -67.449412</p></div>
 <div class="calle"> <p> Palazzo, Lavalle 134</p></div>
 </div> 
-
+<script src="./js/bootstrap.bundle.min.js"></script>  	
   </body>
 </html>
