--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <title>BARBERSHOP</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="widht=device-width,initial-scale=1.0" />
-    <meta
-      name="keywords"
-      content="pelo, cortes de pelo, peluqueria, aspecto fisico"
-    />
-    <meta
-      name="description"
-      content="Ofrecemos un servios de corte de pelo a nivel profesional y estetico"
-    />
+    <title> Barberia Niko Barbershop</title>
+    <meta name="keywords" content="pelo, cortes de pelo, peluqueria, aspecto fisico, barberia comodoro rivadavia"/>
+    <meta name="description" content="Ofrecemos un servios de corte de pelo a nivel profesional y estetico"/>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/estilo.css" />
     <link rel="icon" href="img/logo-arriba.jfif" />
