--- a/ubicacion.html
+++ b/ubicacion.html
@@ -8,7 +8,11 @@
     <link rel="icon" href="img/logo-arriba.jfif"> 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/ubicacion.css" />
+    <title> Barberia Niko Barbershop</title>
+    <meta name="keywords" content="pelo, cortes de pelo, peluqueria, aspecto fisico"/>
+    <meta name="description" content="Ofrecemos un servios de corte de pelo a nivel profesional y estetico"/>
   </head>
+
   <body>
 
     <header>
