--- a/galeria.html
+++ b/galeria.html
@@ -7,8 +7,9 @@
       <link rel="stylesheet" href="css/galeria.css">
       <link rel="icon" href="img/logo-arriba.jfif"> 
       <link href="http://fonts.cdnfonts.com/css/mohave" rel="stylesheet">
-   
-   
+      <title> Barberia Niko Barbershop</title>
+      <meta name="keywords" content="pelo, cortes de pelo, peluqueria, aspecto fisico"/>
+      <meta name="description" content="Ofrecemos un servios de corte de pelo a nivel profesional y estetico"/>
 </head>
 <body>
       
